--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -376,6 +376,8 @@
     <ClCompile Include="Tilemap.cpp">
       <Filter>Archivos de código fuente\Objects\Level</Filter>
     </ClCompile>
+    <ClCompile Include="GameManager.cpp">
+      <Filter>Archivos de código fuente\Others\Managers</Filter>
     <ClCompile Include="ShopEvent.cpp">
       <Filter>Archivos de código fuente\CutScenes\Events</Filter>
     </ClCompile>
@@ -792,6 +794,8 @@
     <ClInclude Include="Tilemap.h">
       <Filter>Archivos de encabezado\Objects\Level</Filter>
     </ClInclude>
+    <ClInclude Include="GameManager.h">
+      <Filter>Archivos de encabezado\Others\Managers</Filter>
     <ClInclude Include="ShopEvent.h">
       <Filter>Archivos de encabezado\CutScenes\Events</Filter>
     </ClInclude>
