--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="DialogueTextUI.cpp" />
     <ClCompile Include="DistanceEnemy.cpp" />
     <ClCompile Include="EnemyArm.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GravityBombCannon.cpp" />
     <ClCompile Include="GravityBombDebuff.cpp" />
     <ClCompile Include="GravityBulletEffect.cpp" />
@@ -300,6 +301,7 @@
     <ClInclude Include="DialogueTextUI.h" />
     <ClInclude Include="DistanceEnemy.h" />
     <ClInclude Include="EnemyArm.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="GravityBombCannon.h" />
     <ClInclude Include="GravityBombDebuff.h" />
     <ClInclude Include="GravityBulletEffect.h" />
