--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,12 @@
 *.userprefs
 
 # Build results
-# [Dd]ebug/
+[Dd]ebug/
 [Dd]ebugPublic/
-# [Rr]elease/
+[Rr]elease/
 [Rr]eleases/
-# x64/
-# x86/
+x64/
+x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
