--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -200,6 +200,9 @@
     <ClCompile Include="MisilBoss1.cpp" />
     <ClCompile Include="MovingComponent.cpp" />
     <ClCompile Include="Melee.cpp" />
+    <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleManager.cpp" />
+    <ClCompile Include="ParticlePull.cpp" />
     <ClCompile Include="OptionsPanel.cpp" />
     <ClCompile Include="PausePanel.cpp" />
     <ClCompile Include="PauseStateHUD.cpp" />
@@ -339,6 +342,9 @@
     <ClInclude Include="NPC.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Melee.h" />
+    <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleManager.h" />
+    <ClInclude Include="ParticlePull.h" />
     <ClInclude Include="OptionsPanel.h" />
     <ClInclude Include="PausePanel.h" />
     <ClInclude Include="PauseStateHUD.h" />
