--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -330,7 +330,12 @@
     </ClCompile>
     <ClCompile Include="GravityBombDebuff.cpp">
       <Filter>Archivos de código fuente\Components</Filter>
+    </ClCompile> 
+    <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticlePull.cpp">
+      <Filter>Archivos de código fuente\Pools</Filter>
     </ClCompile>
+    <ClCompile Include="ParticleManager.cpp" />
     <ClCompile Include="StaticFlyingEnemy.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies</Filter>
     </ClCompile>
@@ -765,6 +770,9 @@
     <ClInclude Include="GravityBombDebuff.h">
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
+    <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticlePull.h" />
+    <ClInclude Include="ParticleManager.h" />
     <ClInclude Include="StaticFlyingEnemy.h">
       <Filter>Archivos de encabezado\Objects\Enemies</Filter>
     </ClInclude>
