Boton menu creditos

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="AmmoViewer.cpp" />
     <ClCompile Include="AnimatedImageUI.cpp" />
     <ClCompile Include="ButtonUI.cpp" />
+    <ClCompile Include="CreditsPanel.cpp" />
     <ClCompile Include="CreditsState.cpp" />
     <ClCompile Include="CreditsStateHUD.cpp" />
     <ClCompile Include="CutScene.cpp" />
@@ -286,6 +287,7 @@
     <ClInclude Include="AnimatedImageUI.h" />
     <ClInclude Include="ButtonUI.h" />
     <ClInclude Include="CamEffectType.h" />
+    <ClInclude Include="CreditsPanel.h" />
     <ClInclude Include="CreditsState.h" />
     <ClInclude Include="CreditsStateHUD.h" />
     <ClInclude Include="CutScene.h" />
