--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -256,6 +256,9 @@
     <ClCompile Include="ExplosiveBulletEffect.cpp">
       <Filter>Archivos de código fuente\Objects\Bullets\Effects</Filter>
     </ClCompile>
+    <ClCompile Include="Boss1.cpp">
+      <Filter>Archivos de código fuente\Objects\Enemies\Bosses</Filter>
+    </ClCompile>
     <ClCompile Include="BotonLanzaMisiles.cpp">
       <Filter>Archivos de código fuente\Objects\Interactables</Filter>
     </ClCompile>
@@ -265,8 +268,6 @@
     <ClCompile Include="NPC.cpp">
       <Filter>Archivos de código fuente\Objects\Interactables</Filter>
     </ClCompile>
-    <ClCompile Include="PiercingBullet.cpp">
-      <Filter>Archivos de código fuente\Objects\Bullets</Filter>
     <ClCompile Include="MisilBoss1.cpp">
       <Filter>Archivos de código fuente\Objects</Filter>
     </ClCompile>
@@ -282,26 +283,6 @@
     <ClCompile Include="GroundEnemy.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies</Filter>
     </ClCompile>
-    <ClCompile Include="Boss1.cpp">
-      <Filter>Archivos de código fuente\Objects\Enemies\Bosses\Boss1</Filter>
-    </ClCompile>
-    <ClCompile Include="MisilBoss1.cpp">
-      <Filter>Archivos de código fuente\Objects\Enemies\Bosses\Boss1</Filter>
-    </ClCompile>
-    <ClCompile Include="LaserContainer.cpp">
-      <Filter>Archivos de código fuente\Objects\Enemies\Bosses\Boss2</Filter>
-    </ClCompile>
-    <ClCompile Include="Laser.cpp">
-      <Filter>Archivos de código fuente\Objects\Enemies\Bosses\Boss2</Filter>
-    </ClCompile>
-    <ClCompile Include="LaserHandler.cpp">
-      <Filter>Archivos de código fuente\Objects\Enemies\Bosses\Boss2</Filter>
-    </ClCompile>
-    <ClCompile Include="Boss2.cpp">
-      <Filter>Archivos de código fuente\Objects\Enemies\Bosses\Boss2</Filter>
-    </ClCompile>
-    <ClCompile Include="Poleaxe.cpp">
-      <Filter>Archivos de código fuente\Objects\Melee</Filter>
     <ClCompile Include="Bullet.cpp">
       <Filter>Archivos de código fuente\Objects\Bullets</Filter>
     </ClCompile>
@@ -433,6 +414,15 @@
     </ClCompile>
     <ClCompile Include="CreditsPanel.cpp">
       <Filter>Archivos de código fuente\HUD\Panels</Filter>
+    </ClCompile>
+    <ClCompile Include="Laser.cpp" />
+    <ClCompile Include="LaserContainer.cpp" />
+    <ClCompile Include="LaserHandler.cpp" />
+    <ClCompile Include="Boss2.cpp">
+      <Filter>Archivos de código fuente\Objects\Enemies\Bosses</Filter>
+    </ClCompile>
+    <ClCompile Include="Poleaxe.cpp">
+      <Filter>Archivos de código fuente\Objects\Melee</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -736,8 +726,14 @@
     <ClInclude Include="NPC.h">
       <Filter>Archivos de encabezado\Objects\Interactables</Filter>
     </ClInclude>
+    <ClInclude Include="Boss1.h">
+      <Filter>Archivos de encabezado\Objects\Enemies\Bosses</Filter>
+    </ClInclude>
     <ClInclude Include="BotonLanzaMisiles.h">
       <Filter>Archivos de encabezado\Objects\Interactables</Filter>
+    </ClInclude>
+    <ClInclude Include="MisilBoss1.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Boss.h">
       <Filter>Archivos de encabezado\Objects\Enemies\Bosses</Filter>
@@ -748,26 +744,6 @@
     <ClInclude Include="CustomAnimatedSpriteComponent.h">
       <Filter>Archivos de encabezado\Components</Filter>
     </ClInclude>
-    <ClInclude Include="Boss1.h">
-      <Filter>Archivos de encabezado\Objects\Enemies\Bosses\Boss1</Filter>
-    </ClInclude>
-    <ClInclude Include="MisilBoss1.h">
-      <Filter>Archivos de encabezado\Objects\Enemies\Bosses\Boss1</Filter>
-    </ClInclude>
-    <ClInclude Include="LaserContainer.h">
-      <Filter>Archivos de encabezado\Objects\Enemies\Bosses\Boss2</Filter>
-    </ClInclude>
-    <ClInclude Include="Laser.h">
-      <Filter>Archivos de encabezado\Objects\Enemies\Bosses\Boss2</Filter>
-    </ClInclude>
-    <ClInclude Include="LaserHandler.h">
-      <Filter>Archivos de encabezado\Objects\Enemies\Bosses\Boss2</Filter>
-    </ClInclude>
-    <ClInclude Include="Boss2.h">
-      <Filter>Archivos de encabezado\Objects\Enemies\Bosses\Boss2</Filter>
-    </ClInclude>
-    <ClInclude Include="Poleaxe.h">
-      <Filter>Archivos de encabezado\Objects\Melee</Filter>
     <ClInclude Include="PiercingBulletEffect.h">
       <Filter>Archivos de encabezado\Objects\Bullets\Effects</Filter>
     </ClInclude>
@@ -899,6 +875,15 @@
     </ClInclude>
     <ClInclude Include="CreditsPanel.h">
       <Filter>Archivos de encabezado\HUD\Panels</Filter>
+    </ClInclude>
+    <ClInclude Include="Laser.h" />
+    <ClInclude Include="LaserContainer.h" />
+    <ClInclude Include="LaserHandler.h" />
+    <ClInclude Include="Boss2.h">
+      <Filter>Archivos de encabezado\Objects\Enemies\Bosses</Filter>
+    </ClInclude>
+    <ClInclude Include="Poleaxe.h">
+      <Filter>Archivos de encabezado\Objects\Melee</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1043,21 +1028,6 @@
     <Filter Include="Archivos de código fuente\Objects\Interactables">
       <UniqueIdentifier>{a2aab5e8-1f03-438e-ad1c-94a98250433c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de código fuente\Objects\Enemies\Bosses\Boss1">
-      <UniqueIdentifier>{ff49b8bb-736b-4580-8ac4-4d658d64bb97}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Objects\Enemies\Bosses\Boss1">
-      <UniqueIdentifier>{da53e888-f508-4813-8116-6ff680e0e5ea}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Objects\Enemies\Bosses\Boss2">
-      <UniqueIdentifier>{bef2258b-fe74-4d41-bc73-99b96fae34d8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de código fuente\Objects\Enemies\Bosses\Boss2">
-      <UniqueIdentifier>{88c9dbcf-ff7a-4b5f-8c88-18f2c16f7ed5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de código fuente\Objects\Melee">
-      <UniqueIdentifier>{91c2fb3e-33b4-42c8-b741-0a0b383c9988}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Archivos de código fuente\HUD\Shop">
       <UniqueIdentifier>{82374948-29e9-45e7-a3a0-fd573588350b}</UniqueIdentifier>
     </Filter>
@@ -1072,6 +1042,9 @@
     </Filter>
     <Filter Include="Archivos de código fuente\Events">
       <UniqueIdentifier>{c0c20e7b-ff95-4a2d-8b6f-2b0da7fa47a6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de código fuente\Objects\Melee">
+      <UniqueIdentifier>{91c2fb3e-33b4-42c8-b741-0a0b383c9988}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
