--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -205,7 +205,7 @@
     <ClCompile Include="Melee.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleManager.cpp" />
-    <ClCompile Include="ParticlePull.cpp" />
+    <ClCompile Include="ParticlePool.cpp" />
     <ClCompile Include="OptionsPanel.cpp" />
     <ClCompile Include="PausePanel.cpp" />
     <ClCompile Include="PauseStateHUD.cpp" />
@@ -350,7 +350,7 @@
     <ClInclude Include="Melee.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleManager.h" />
-    <ClInclude Include="ParticlePull.h" />
+    <ClInclude Include="ParticlePool.h" />
     <ClInclude Include="OptionsPanel.h" />
     <ClInclude Include="PausePanel.h" />
     <ClInclude Include="PauseStateHUD.h" />
