--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -331,9 +331,6 @@
     <ClCompile Include="GravityBombDebuff.cpp">
       <Filter>Archivos de código fuente\Components</Filter>
     </ClCompile>
-    <ClCompile Include="ParticlePull.cpp">
-      <Filter>Archivos de código fuente\Pools</Filter>
-    </ClCompile>
     <ClCompile Include="StaticFlyingEnemy.cpp">
       <Filter>Archivos de código fuente\Objects\Enemies</Filter>
     </ClCompile>
@@ -414,6 +411,9 @@
     </ClCompile>
     <ClCompile Include="CreditsPanel.cpp">
       <Filter>Archivos de código fuente\HUD\Panels</Filter>
+    </ClCompile>
+    <ClCompile Include="ParticlePool.cpp">
+      <Filter>Archivos de código fuente\Pools</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -849,9 +849,6 @@
     <ClInclude Include="WaitingEvent.h">
       <Filter>Archivos de encabezado\Events</Filter>
     </ClInclude>
-    <ClInclude Include="ParticlePull.h">
-      <Filter>Archivos de encabezado\Pools</Filter>
-    </ClInclude>
     <ClInclude Include="ParticleManager.h">
       <Filter>Archivos de encabezado\Others\Managers</Filter>
     </ClInclude>
@@ -866,6 +863,9 @@
     </ClInclude>
     <ClInclude Include="CreditsPanel.h">
       <Filter>Archivos de encabezado\HUD\Panels</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticlePool.h">
+      <Filter>Archivos de encabezado\Pools</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
