--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -252,6 +252,7 @@
     <ClCompile Include="PlayState.cpp" />
     <ClCompile Include="PlayStateHUD.cpp" />
     <ClCompile Include="PoolWrapper.cpp" />
+    <ClCompile Include="PopUpPanel.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="ShakeEvent.cpp" />
     <ClCompile Include="Shop.cpp" />
@@ -401,6 +402,7 @@
     <ClInclude Include="PlayState.h" />
     <ClInclude Include="PlayStateHUD.h" />
     <ClInclude Include="PoolWrapper.h" />
+    <ClInclude Include="PopUpPanel.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="SDLError.h" />
     <ClInclude Include="ShakeEvent.h" />
