--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -176,7 +176,7 @@
     <ClCompile Include="BouncingBulletEffect.cpp" />
     <ClCompile Include="BomberEnemy.cpp" />
     <ClCompile Include="Boss1.cpp" />
-    <ClCompile Include="BotonLanzaMisiles.cpp" />
+    <ClCompile Include="MissileTurret.cpp" />
     <ClCompile Include="BulletPool.cpp" />
     <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="CustomAnimatedSpriteComponent.cpp" />
@@ -200,7 +200,7 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="ExplosiveBulletEffect.cpp" />
     <ClCompile Include="FlyingEnemy.cpp" />
-    <ClCompile Include="MisilBoss1.cpp" />
+    <ClCompile Include="Missile.cpp" />
     <ClCompile Include="MovingComponent.cpp" />
     <ClCompile Include="Melee.cpp" />
     <ClCompile Include="Particle.cpp" />
@@ -318,7 +318,7 @@
     <ClInclude Include="BouncingBulletEffect.h" />
     <ClInclude Include="BomberEnemy.h" />
     <ClInclude Include="Boss1.h" />
-    <ClInclude Include="BotonLanzaMisiles.h" />
+    <ClInclude Include="MissileTurret.h" />
     <ClInclude Include="Capsule.h" />
     <ClInclude Include="Cursor.h" />
     <ClInclude Include="CustomAnimatedSpriteComponent.h" />
@@ -341,7 +341,7 @@
     <ClInclude Include="ExplosiveBulletEffect.h" />
     <ClInclude Include="FlyingEnemy.h" />
     <ClInclude Include="MenuStateHUD.h" />
-    <ClInclude Include="MisilBoss1.h" />
+    <ClInclude Include="Missile.h" />
     <ClInclude Include="MoveEvent.h" />
     <ClInclude Include="MovingComponent.h" />
     <ClInclude Include="NormalSpawner.h" />
